--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="pilih_event">Pilih Event</string>
     <string name="pilih_guest">Pilih Guest</string>
     <string name="selamat_datang">Selamat Datang</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="event_map">Event Map</string>
+    <string name="back_to_list">Back to List</string>
+    <string name="move_to_map">Move to Map</string>
 </resources>
